# Plab-Rundown

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_base64_check.py  test_email_folders.py  test_imap_fix.py  test_latest_email.py  workflow.py  明天部署指南.md
.augment/rules/: basic.md  langchain&langgraph-rules.md
config/: config.yaml
data/: clipped_email.html  original_email.html  translated_email.html  wechat_formatted.html
deploy/: Dockerfile  INDEX.md  QUICK_START.md  README.md  SERVER_SETUP.md  TENCENT_CLOUD_DEPLOY.md  deploy.sh  docker-compose.yml  server-deploy.sh  test-server.sh
deploy/scripts/: backup.sh  check_status.sh  debug_scheduler.sh  manual_run.sh
docs/: EMAIL_SERVICE_GUIDE.md  GMAIL_TOKEN_REFRESH.md  明天部署指南.md
scripts/: refresh_gmail_token.py
src/: __init__.py
src/email/: __init__.py  base.py  factory.py  gmail_client.py  imap_client.py
src/gmail/: __init__.py  client.py  parser.py
src/scheduler/: __init__.py  main.py  tasks.py
src/translator/: __init__.py  langchain_translator.py
src/utils/: __init__.py  config.py  database.py  logger.py
src/wechat/: __init__.py  publisher.py  table_based_converter.py
test/: test_openai.py  test_workflow.py
znotez/: znote
